[gd_scene load_steps=11 format=3 uid="uid://c22yxfeqye05h"]

[ext_resource type="Theme" uid="uid://cd2iy5r0u86vj" path="res://assets/ui/theme.tres" id="1_8wco2"]
[ext_resource type="Script" path="res://game/ui/ai_control.gd" id="1_iu083"]
[ext_resource type="PackedScene" uid="uid://b4hxuj6yrvaiy" path="res://game/ui/ability_card/ability_card.tscn" id="2_cph2k"]
[ext_resource type="Script" path="res://ability/Ability.gd" id="3_inn7q"]
[ext_resource type="Texture2D" uid="uid://w6tvqnoxb5re" path="res://assets/ui/Colored/grey.png" id="4_d74ch"]
[ext_resource type="Resource" uid="uid://6qfvqv50fd3o" path="res://ability/neuro/more-neuros/more_neuros.tres" id="4_myyff"]
[ext_resource type="PackedScene" uid="uid://civlssogrw6f4" path="res://game/ai/random/RandomAI.tscn" id="5_vnlnv"]
[ext_resource type="Resource" uid="uid://df5ho40xrpv8q" path="res://ability/neuro/mockery/mockery.tres" id="6_7nogw"]
[ext_resource type="Resource" uid="uid://55fewfc5a61g" path="res://ability/neuro/halucination-stew/ghost_neuro.tres" id="6_t1hv5"]
[ext_resource type="Script" path="res://neuro/neuro_integration.gd" id="7_howro"]

[node name="AiControl" type="Control" node_paths=PackedStringArray("turn_timer", "turn_about_to_end_timer", "card_selection_finished_timer")]
physics_interpolation_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8wco2")
script = ExtResource("1_iu083")
turn_timer = NodePath("TurnWaitTimer")
turn_about_to_end_timer = NodePath("TurnAboutToEndTimer")
card_selection_finished_timer = NodePath("CardSelectionAnimationFinished")
timer_color = Color(0, 0.866667, 0, 1)
timer_warning_color = Color(0.956863, 0, 0, 1)
available_abilities = Array[ExtResource("3_inn7q")]([ExtResource("4_myyff"), ExtResource("4_myyff"), ExtResource("6_t1hv5"), ExtResource("6_7nogw"), ExtResource("4_myyff"), null, null])

[node name="RandomAi" parent="." instance=ExtResource("5_vnlnv")]

[node name="NeuroIntegration" type="Node" parent="."]
script = ExtResource("7_howro")

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="placeholder2" type="Control" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.71

[node name="Panel" type="Control" parent="MainContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="AbilityGrid" type="GridContainer" parent="MainContainer/VBoxContainer/Panel/MarginContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 10
columns = 5

[node name="AbilityCard" parent="MainContainer/VBoxContainer/Panel/MarginContainer/AbilityGrid" instance=ExtResource("2_cph2k")]
layout_mode = 2

[node name="AbilityCard2" parent="MainContainer/VBoxContainer/Panel/MarginContainer/AbilityGrid" instance=ExtResource("2_cph2k")]
layout_mode = 2

[node name="AbilityCard3" parent="MainContainer/VBoxContainer/Panel/MarginContainer/AbilityGrid" instance=ExtResource("2_cph2k")]
layout_mode = 2

[node name="AbilityCard4" parent="MainContainer/VBoxContainer/Panel/MarginContainer/AbilityGrid" instance=ExtResource("2_cph2k")]
layout_mode = 2

[node name="TimerContainer" type="Control" parent="MainContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="TimerBar" type="TextureProgressBar" parent="MainContainer/VBoxContainer/TimerContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 118.0
offset_top = -15.0
offset_right = 618.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
page = 1.0
value = 80.0
rounded = true
fill_mode = 6
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5
texture_progress = ExtResource("4_d74ch")
tint_progress = Color(0, 0.866667, 0, 1)

[node name="Control" type="Control" parent="MainContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.6

[node name="placeholder3" type="Control" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0

[node name="TurnWaitTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="TurnAboutToEndTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CardSelectionAnimationFinished" type="Timer" parent="."]
one_shot = true

[connection signal="options_generated" from="." to="RandomAi" method="_on_selections_available"]
[connection signal="options_generated" from="." to="NeuroIntegration" method="_on_ai_control_options_generated"]
[connection signal="turn_about_to_end" from="." to="RandomAi" method="_on_turn_about_to_end"]
[connection signal="turn_end" from="." to="RandomAi" method="_on_turn_end"]
[connection signal="turn_start" from="." to="RandomAi" method="_on_turn_start"]
[connection signal="made_selection" from="RandomAi" to="." method="ability_selected"]
[connection signal="timeout" from="TurnWaitTimer" to="." method="_on_turn_wait_timer_timeout"]
[connection signal="timeout" from="TurnAboutToEndTimer" to="." method="_on_turn_about_to_end_timer_timeout"]
[connection signal="timeout" from="CardSelectionAnimationFinished" to="." method="_on_card_selection_animation_finished_timeout"]
